Update index page

--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
 
 
       <!-- YÖNETİCİ PANELİ -->
-      <section id="screen-admin" class="screen" style="display:none;">
+      <section id="screen-admin" class="screen">
         <div class="card" style="margin-bottom:10px;">
           <div class="section-title">Admin Paneli</div>
           <div class="section-sub">Üyeleri, reklam isteklerini, mesajları ve paketleri yönet.</div>
